--- a/package.json
+++ b/package.json
@@ -10,8 +10,30 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.14.3",
     "@astrojs/check": "^0.9.3",
+    "@astrojs/node": "^8.3.3",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/nunito": "^5.0.20",
+    "animejs": "^3.2.2",
+    "astro": "^4.14.5",
+    "astro-icon": "^1.1.1",
+    "daisyui": "^4.12.10",
+    "leaflet": "^1.9.4",
+    "leaflet-control-custom": "^1.0.0",
+    "leaflet-draw": "^1.0.4",
+    "leaflet.control.layers.tree": "^1.1.0",
+    "leaflet.locatecontrol": "^0.81.1",
+    "leaflet.markercluster": "^1.5.3",
+    "leaflet.markercluster.layersupport": "^2.0.1",
+    "tailwindcss": "^3.4.10",
+    "tailwindcss-animated": "^1.1.2",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.12",
+    "@types/leaflet-draw": "^1.0.11",
+    "@types/leaflet.markercluster": "^1.5.4",
+    "@types/leaflet.markercluster.layersupport": "^1.0.5",
+    "@types/osrm": "^5.25.5"
   }
 }
